_sass/pages/_services.scss
.our-services {
  @extend %page-main-base;
  @extend %wide-column;
}

.service-areas-row {
  @extend %row;
}

.service-area-col {
  @extend %col-md-4;

  &:not(:last-child) {
    @extend %mb-sm-down-7;
  }
}

.service-area-card {
  @extend %card;
  @extend %no-border;
  @extend %text-center;
  cursor: pointer;
  height: 100%;

  &:hover,
  &:focus {
    a {
      color: $link-hover-color;
    }
  }
}

.service-area-img {
  @extend %mx-auto;
  width: 240px;
  height: 171px;

  @include media-breakpoint-up(lg) {
    width: 285px;
    height: 203px;
  }
}

.service-area-block {
  @extend %card-block;
  padding: 2rem 1.25rem 1.25rem;

  h3 {
    @extend %card-title;
    @extend %text-uppercase;
    color: $brand-primary;
    font-size: $font-size-small;
  }

  p {
    @extend %card-text;
    @extend %font-weight-bold;
    color: $body-color;
  }
}

.service-area-footer {
  @extend %card-footer;
  @extend %no-border;
  padding: 0 1.25rem;
}

.minor-service-areas-row {
  @extend %row;
  @extend %mt-7;
}

.minor-service-area-col {
  @extend %col;

  p {
    @extend %text;
    @extend %m-0;
  }
}

.capabilities-row,
.industry-info-list-row {
  @extend %row;
}

.capability-group-col,
.industry-info-item-col {
  @extend %col-md-6;
  @extend %col-lg-4;
  @extend %mt-4;

  div {
    @extend %mx-auto;
    @extend %mb-4;
    border-top: 1px solid $gray-lightest;
    width: 75%;
  }

  h3 {
    @extend %mb-3;
    @extend %text-uppercase;
    font-size: $font-size-small;
  }
}

.capability-group-col {
  ul {
    @extend %list-unstyled;
    font-size: $font-size-small;
    line-height: 1.75;
  }
}

.industry-info-item-col {
  p {
    @extend %mb-0;
    font-size: $font-size-small;

    + p {
      @extend %mt-3;
    }
  }
}

